--- a/index.html
+++ b/index.html
@@ -227,14 +227,16 @@
             alt="Web Dev Club Council 2022"
           />
         </figure>
+      </div>
+      <!-- about end -->
     </main>
-    <div class="footer__wrapperWidth">
-    <footer class="footer">
-        <div class="footer__copyright">
-                <figure class="footer__figureUvuLogo">
-                <img class="footer__uvuLogo" src="/images/UVUHorizontalWhite-0011.png">
-                </figure>
-                <p>&copy;2022 Web Dev Club</p>
+    <!-- footer start -->
+
+    <footer class="pt-3 bg-black">
+      <div class="d-flex flex-column bd-highlight mb-3">
+        <!-- uvu-logo start -->
+        <div class="container">
+          <img
             id="uvu-logo"
             class="rounded mx-auto d-block"
             src="/images/UVUHorizontalWhite-0011.png"
