changed lorem to paragraphs

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                       <a class="nav-link" href="./events.html">Events</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./contact.html">Link</a>
+                      <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
                   </ul>
                 </div>
@@ -152,8 +152,7 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title" id="card-title">Collaborate</h4>
                   <p class="card-text" id="card-body">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta,
-                    dolores!
+                    Website projects, hackathons, startups, you name it! We partner with other tech clubs on campus to provide student-ran opportunities. 
                   </p>
                 </div>
               </div>
@@ -173,8 +172,7 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title" id="card-title">Network</h4>
                   <p class="card-text" id="card-body">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
-                    omnis?
+                    We've gotten free tickets to tech conferences such as Silicon Slopes, have hosted multiple industry professionals as guest speakers along with companies that offer jobs and internships to members. 
                   </p>
                 </div>
               </div>
@@ -194,8 +192,7 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title" id="card-title">Learn New Tech</h4>
                   <p class="card-text" id="card-body">
-                    A short caption detailing an aspect of the brand which is worth
-                    mentioning.
+                    Our meetings are a perfect opportunity to learn new technology and be apart of exciting tech conversations on campus.
                   </p>
                 </div>
               </div>
