changed paragraph wording

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title" id="card-title">Network</h4>
                   <p class="card-text" id="card-body">
-                    We've gotten free tickets to tech conferences such as Silicon Slopes, have hosted multiple industry professionals as guest speakers along with companies that offer jobs and internships to members. 
+                    We've gotten free tickets to tech conferences such as Silicon Slopes Summit, have hosted multiple industry professionals as guest speakers along with companies that offer jobs and internships to members. 
                   </p>
                 </div>
               </div>
@@ -206,10 +206,6 @@
       <div class="container-fluid">
         <div class="main__infoFlexDiv">
           <p class="main__paragraph">
-            &nbsp;&nbsp;&nbsp;In the Web Dev Club, aspiring Web Developers can learn new
-            technologies, collaborate on student or club projects with fellow Web
-            Developers and Designers, and participate in events such as hackathons and
-            social events!<br />
             &nbsp;&nbsp;&nbsp;There are many ways to participate and contribute to the
             club while learning about website development.
             <a href="https://discord.gg/VC8yUwK7fe" target="_blank">Join our Discord</a>
