--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 id="offcanvasDarkNavbar"
                 aria-labelledby="offcanvasDarkNavbarLabel"
               >
-                <div class="offcanvas-header">
+                <div class="offcanvas-header bg-black">
                   <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
                     Web Dev Club
                   </h5>
@@ -82,7 +82,7 @@
                     aria-label="Close"
                   ></button>
                 </div>
-                <div class="offcanvas-body">
+                <div class="offcanvas-body bg-black">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="./index.html"
@@ -152,7 +152,8 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title" id="card-title">Collaborate</h4>
                   <p class="card-text" id="card-body">
-                    Website projects, hackathons, startups, you name it! We partner with other tech clubs on campus to provide student-ran opportunities. 
+                    Website projects, hackathons, startups, you name it! We partner with
+                    other tech clubs on campus to provide student-ran opportunities.
                   </p>
                 </div>
               </div>
@@ -172,7 +173,9 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title" id="card-title">Network</h4>
                   <p class="card-text" id="card-body">
-                    We've gotten free tickets to tech conferences such as Silicon Slopes Summit, have hosted multiple industry professionals as guest speakers along with companies that offer jobs and internships to members. 
+                    We've gotten free tickets to tech conferences such as Silicon Slopes
+                    Summit, have hosted multiple industry professionals as guest speakers
+                    along with companies that offer jobs and internships to members.
                   </p>
                 </div>
               </div>
@@ -192,7 +195,8 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title" id="card-title">Learn New Tech</h4>
                   <p class="card-text" id="card-body">
-                    Our meetings are a perfect opportunity to learn new technology and be apart of exciting tech conversations on campus.
+                    Our meetings are a perfect opportunity to learn new technology and be
+                    apart of exciting tech conversations on campus.
                   </p>
                 </div>
               </div>
