--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
               id="offcanvasDarkNavbar"
               aria-labelledby="offcanvasDarkNavbarLabel"
             >
-              <div class="offcanvas-header">
+              <div class="offcanvas-header bg-black">
                 <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
                   Web Dev Club
                 </h5>
@@ -75,7 +75,7 @@
                   aria-label="Close"
                 ></button>
               </div>
-              <div class="offcanvas-body">
+              <div class="offcanvas-body bg-black">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                   <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="./index.html">Home</a>
