button size change
replace length of the button from 280px to 20% for responsive, active buttons hover effect

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <button
             id="registration"
             type="button"
-            class="main__joinButton btn btn-primary active p-3"
+            class="main__joinButton btn btn-primary p-2"
             data-bs-toggle="button"
             aria-pressed="true"
           >
